# omegaconf

./: .coveragerc  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pyre_configuration  .readthedocs.yaml  .travis.yml  .watchmanconfig  AGENTS.md  BACKLOG-UPDATES.md  BACKLOG.md  CITATION.cff  CONTRIBUTING.md  DISCLAIMER  LICENSE  MANIFEST-pydevd.in  MANIFEST.in  NEWS.md  README-pydevd.md  README.md  backlog-updates.md  backlog.json  backlog.md  events.jsonl  last_snapshot.json  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_pydevd.py  tox.ini  updates.jsonl
.circleci/: config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  backlog-atlas.json  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  publish.yml  publish_dev.yml  (+4 more)
benchmark/: benchmark.py
build_helpers/: __init__.py  build_helpers.py  check_package_artifacts.py  get_vendored.py  test_helpers.py
docs/: Makefile  document-lifecycle.md  make.bat
news/: 1003.bugfix  1006.feature  101.feature  102.feature  1020.bugfix  103.removal  105.feature  1058.bugfix  107.feature  1075.feature  1082.feature  1086.bugfix  1087.bugfix  1091.misc  1095.bugfix  110.bugfix  1102.bugfix  1109.api_change  111.bugfix  1114.misc  1118.bugfix  1124.feature  1126.bugfix  1127.bugfix  1129.feature  1131.api_change  114.feature  1150.feature  1152.feature  1156.bugfix  116.removal.1  116.removal.2  1165.bugfix  1166.bugfix  1174.bugfix  1176.docs  1177.bugfix  1178.bugfix  1182.feature  1194.bugfix  (+252 more)
omegaconf/: __init__.py  _impl.py  _utils.py  _yaml.py  base.py  basecontainer.py  built_in_resolvers.py  config.py  container.py  dictconfig.py  errors.py  grammar_parser.py  grammar_visitor.py  ir.py  listconfig.py  node.py  nodes.py  omegaconf.py  tupleconfig.py  types.py  typing.py  version.py
pydevd_plugins/: __init__.py
requirements/: base.txt  coverage.txt  dev.txt  dev_pypy.txt  docs.txt  lint.txt
subprojects/backlog-tool/: .gitignore  README.md  STANDALONE-TODO.md  pyproject.toml  test_update_backlog.py
subprojects/backlog-tool/backlog_tool/: __init__.py  config.yaml
subprojects/backlog-tool/backlog_tool/templates/: backlog.md.tmpl  backlog_updates_entry.md.tmpl  workflow.yml.tmpl
tests/: __init__.py  conftest.py  test_base_config.py  test_basic_ops.py  test_basic_ops_dict.py  test_basic_ops_list.py  test_basic_ops_tuple.py  test_check_package_artifacts.py  test_compare_dictconfig_vs_dict.py  test_config_eq.py  test_container_unions.py  test_create.py  test_dict_basic_ops.py  test_errors.py  test_flatten.py  test_freeze.py  test_get_full_key.py  test_grammar.py  test_interpolation.py  test_list_basic_ops.py  test_matrix.py  test_merge.py  test_missing_type.py  test_nested_containers.py  test_nodes.py  test_omegaconf.py  test_optional.py  test_pydev_resolver_plugin.py  test_pydevd_plugin_namespace.py  test_readonly.py  test_select.py  test_serialization.py  test_serialization_deprecated_save.py  test_struct.py  test_structured_config.py  test_structured_config_unions.py  test_to_container.py  test_to_yaml.py  test_tuple_integration.py  test_tuple_merge.py  (+8 more)
tutorial/: config.yaml  tutorial.py
(+118 files in other folders)
